# openTAWS

./: .gitignore  .gitlab-ci.yml  Cargo.toml  FINDINGS.md  Makefile  NOTES.md  README.md  crates.js  flake.nix  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml  rust.yml  rustdoc.yml
airport_db/: Cargo.toml
airport_db/src/: main.rs
app/: Cargo.toml
app/src/: main.rs
aviation_database/: Cargo.toml  README.md  build.rs
aviation_database/src/: consts.rs  lib.rs  reference.rs
contrib/: make-screenshots.sh
contrib/docker-alpine-ruby-cucumber/: Dockerfile
contrib/docker-python-wasmtime/: Dockerfile
design/: architecture.puml  sample.puml
examples/: flightgear.rs
features/: .altitudecallout.feature.swp  .sample.feature.swp  altitudecallout.feature  ffac.feature  fivehundredfootcallout.feature  guinea_pig.feature  mode_1.feature  sample.feature
features/taws/: alert_prioritization.feature  mode-1.feature  mode_1.feature  self-test.feature  self_test.feature
features/terrain_server/: altitudequery.feature
geospatial/: Cargo.toml
geospatial/src/: cartesian.rs  geodetic.rs  lib.rs  wgs84.rs
header/: otaws.h
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/opentaws/prelude/: trait.AlertSystem.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.UnwindSafe.js  (+1 more)
kd_tree/: Cargo.toml  README.md
kd_tree/src/: lib.rs
kd_tree_sort/: Cargo.toml  README.md
kd_tree_sort/benches/: search.rs
kd_tree_sort/fuzz/: Cargo.toml
kd_tree_sort/fuzz/fuzz_targets/: kd_tree_search.rs
kd_tree_sort/src/: lib.rs
libs/otaws_core/: Cargo.toml
libs/otaws_core/src/: lib.rs  types.rs
libs/otaws_core/src/alarms/: mod.rs
libs/otaws_core/test/: cucumber.rs
libs/terrain_server/: Cargo.toml
libs/terrain_server/src/: lib.rs
libs/terrain_server/tests/: altitudequery_spec.rs  altitudequery_test.rs
opentaws/: Cargo.toml  all.html  enum.Alert.html  enum.AlertLevel.html  index.html  sidebar-items.js  struct.AircraftState.html  struct.AlertState.html  struct.Taws.html  struct.TawsConfig.html
opentaws/alerts/: enum.Alert.html  enum.AlertLevel.html  struct.AlertState.html  trait.AlertSystem.html
opentaws/alerts/ffac/: struct.Ffac.html
opentaws/alerts/flta/: struct.Flta.html
opentaws/alerts/functionalities/: index.html
opentaws/alerts/mode_1/: struct.Mode1.html
opentaws/alerts/mode_2/: struct.Mode2.html
opentaws/alerts/mode_3/: struct.Mode3.html
opentaws/alerts/mode_4/: struct.Mode4.html
opentaws/alerts/mode_5/: struct.Mode5.html
opentaws/alerts/pda/: struct.Pda.html
opentaws/functionalities/: index.html  sidebar-items.js  struct.Ffac.html  struct.Flta.html  struct.Mode1.html  struct.Mode2.html  struct.Mode3.html  struct.Mode4.html  struct.Mode5.html  struct.Pda.html
opentaws/prelude/: enum.Alert.html  enum.AlertLevel.html  index.html  sidebar-items.js  struct.AircraftState.html  struct.AlertState.html  struct.TawsConfig.html  struct.degree.html  struct.foot.html  struct.foot_per_minute.html  struct.foot_per_second_squared.html  struct.knot.html  struct.second.html  trait.AlertSystem.html  type.Acceleration.html  type.AmountOfSubstance.html  type.Angle.html  type.AngularAcceleration.html  type.AngularJerk.html  type.AngularVelocity.html  type.Area.html  type.AvailableEnergy.html  type.Capacitance.html  type.CatalyticActivity.html  type.CatalyticActivityConcentration.html  type.Curvature.html  type.ElectricCharge.html  type.ElectricCurrent.html  type.ElectricPotential.html  type.ElectricalConductance.html  type.ElectricalResistance.html  type.Energy.html  type.Force.html  type.Frequency.html  type.HeatCapacity.html  type.HeatFluxDensity.html  type.HeatTransfer.html  type.Inductance.html  type.Information.html  type.InformationRate.html  (+29 more)
opentaws/src/: aircraft_state.rs  alerts.rs  class_c.rs  envelope.rs  lib.rs  macros.rs  prelude.rs  terrain_server.rs  types.rs
opentaws/src/alerts/: ffac.rs  flta.rs  mode1.rs  mode3.rs  mode_1.rs  mode_2.rs  mode_3.rs  mode_4.rs  mode_5.rs  pda.rs
opentaws/src/class_c/: ffac.rs  mode1.rs  mode3.rs  offset_envelope.ipynb  pda.rs
opentaws/types/: struct.AircraftState.html  struct.TawsConfig.html
otaws/: Cargo.toml
otaws/src/: main.rs  types.rs
src/: capi.rs  envelope.rs  lib.rs  macros.rs  prelude.rs  signal_test.rs  types.rs  wasi.rs
src/alerts/: ffac.rs  flta.rs  mod.rs  mode_1.rs  mode_2.rs  mode_3.rs  mode_4.rs  mode_5.rs  pda.rs
src/opentaws/: alerts.rs.html  envelope.rs.html  lib.rs.html  macros.rs.html  prelude.rs.html  types.rs.html
src/terrain_server/: mod.rs  terrain_server.rs
taws_minimal/: Cargo.toml
taws_minimal/examples/: flightgear.rs
taws_minimal/features/: alert_prioritization.feature  ffac.feature  mode_1.feature  mode_3.feature  pda.feature  self_test.feature
taws_minimal/src/: lib.rs  macros.rs
taws_minimal/tests/: cucumber.rs
taws_minimal/tests/util/: aircraft_state.rs  constraint.rs  mod.rs  parameters.rs  world.rs
taws_minimal/tests/util/constraints/: aircraft_state.rs  aircraft_state_constraint.rs  aircraft_state_constraints.rs  airport_database.rs  constraint.rs  constraint_enforcement.rs  mod.rs  press_mould.rs
taws_primitives/: Cargo.toml
taws_primitives/src/: lib.rs
terrain_database/: Cargo.toml
terrain_database/src/: database.rs  lib.rs  prediction.rs
terrain_server/: Cargo.toml
terrain_server/tests/: altitudequery_test.rs
test/: cucumber.rs
tests/: altitudequery_test.rs  cucumber.rs
tests/terrain_server/: altitudequery_test.rs
tests/util/: mod.rs
uom_nalgebra/: Cargo.toml
uom_nalgebra/src/: lib.rs  matrix_shapes.rs  quantity_matrix.rs  si.rs
(+17 files in other folders)
