[package]
name = "opentaws"
version = "0.1.0"
authors = [
	"Wanja Zaeske <wanja.zaeske@tu-clausthal.de>",
	"Janick Beck <janick.beck@tu-clausthal.de>",
	"Umut Durak <umut.durak@tu-clausthal.de>",
	]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async adapter for mavlink conections"
readme = "README.md"
repository = "https://github.com/aeronautical-informatics/openTAWS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
github = { repository = "aeronautical-informatics/openTAWS" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/openTAWS" }
maintenance = { status = "actively-developed" }

[features]
default = [ ]

[dependencies]
lazy_static = "1"
uom = "0"

### Test deps
strum = { version = "^0.19", features = ["derive"]}

[dev-dependencies]
async-trait = "^0.1.41"
cucumber = { package = "cucumber_rust", git = "https://github.com/bbqsrc/cucumber-rust", branch = "main" } # TODO revert to regular release
futures = "0"
quickcheck = "^0.9.2"
rand = "0.7"

# for examples/flightgear
reqwest = { version = "^0.10", default-features = false, features = [ "json" ] }
serde = { version = "^1.0", features = [ "derive" ] }
smol = "1.0"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
path = "tests/cucumber.rs"
