[package]
name = "opentaws"
version = "0.1.0"
authors = [
	"Wanja Zaeske <wanja.zaeske@tu-clausthal.de>",
	"Janick Beck <janick.beck@tu-clausthal.de>",
	"Umut Durak <umut.durak@tu-clausthal.de>",
	]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async adapter for mavlink conections"
readme = "README.md"
repository = "https://github.com/aeronautical-informatics/openTAWS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "aeronautical-informatics/openTAWS", branch = "main" }
github = { repository = "aeronautical-informatics/openTAWS" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/openTAWS" }
maintenance = { status = "actively-developed" }

[features]
default = ["use-serde"]
use-serde = ["serde", "uom/use_serde"]

[dependencies]
casey = "0.3"
lazy_static = "1"
uom = { version = "0", default-features = false, features = [ "f64", "si", "use_serde" ] }
ringbuffer = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
async-trait = "0.1"
cucumber = { package = "cucumber_rust", version = "0.8" }
futures = "0"
rand = "*"
rand_pcg = "*"
uom = { version = "*", features = [ "f64", "si", "std", "use_serde" ] }

# for examples/flightgear
async-tungstenite = { version = "*", features = [ "async-std-runtime" ] }
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "1.0"
smol = "^1.0"



[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
path = "tests/cucumber.rs"
