[package]
name = "opentaws"
version = "0.1.0"
authors = [
	"Wanja Zaeske <wanja.zaeske@tu-clausthal.de>",
	"Janick Beck <janick.beck@tu-clausthal.de>",
	"Umut Durak <umut.durak@tu-clausthal.de>",
	]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An open source TAWS"
documentation = "https://aeronautical-informatics.github.io/openTAWS/"
readme = "README.md"
repository = "https://github.com/aeronautical-informatics/openTAWS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "aeronautical-informatics/openTAWS", branch = "main" }
github = { repository = "aeronautical-informatics/openTAWS" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/openTAWS" }
maintenance = { status = "actively-developed" }

[features]
default = ["use-serde"]
use-serde = ["uom/use_serde"]

[dependencies]
casey = "0.3"
lazy_static = { version = "1", features = [ "spin_no_std" ] }
uom = { version = "0", default-features = false, features = [ "f64", "si" ] }
ringbuffer = "0.4"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }

# testing ang examples
arbitrary = { version = "1", features = ["derive"], optional = true }
async-tungstenite = { version = "*", features = [ "async-std-runtime" ], optional = true }
cucumber_rust = { version = "0.8", features = [ "macros" ], optional = true  }
futures = { version = "0", optional = true }
rand = { version = "*", optional = true }
rand_pcg = { version = "*", optional = true }
serde_json = { version = "1.0", optional = true }
smol = { version = "1.0", optional = true }


[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
path = "tests/cucumber.rs"
required-features = [ "arbitrary", "cucumber_rust", "futures", "rand", "rand_pcg", "serde_json" ]

[[example]]
name = "flightgear"
required-features = [ "async-tungstenite", "futures", "serde_json", "smol" ]
