[package]
name = "airport_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89" }
serde_with = { version = "2.1.0" }
regex = { version = "1.7.0" }
lazy_static = { version = "1.4.0" }
uom = { version = "0.33.0" }
