[package]
name = "aviation_database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = "0.31"
kd_tree = { path = "../kd_tree" }
taws_primitives = { path = "../taws_primitives" }


[build-dependencies]
anyhow = "1.0"
csv = "1.1"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.5"
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uneval = "0.2"
uom = "0.31"
ureq = "2"
kd_tree_sort = { path = "../kd_tree_sort" }
