[package]
name = "aviation_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { version = "2.0", default-features = false }
uom = { version = "0", default-features = false, features = ["f64", "si", "libm"] }
kd_tree = { path = "../kd_tree" }


[build-dependencies]
anyhow = "1.0"
csv = "1.1"
proc-macro2 = "1.0"
quote = "1.0"
prettyplease = "0.1"
syn = { version = "1.0", features = ["parsing"]}
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uneval = "0.2"
uom = { version = "0", default-features = false, features = [ "f64", "si", "libm" ] }
ureq = "2"
kd_tree_sort = { path = "../kd_tree_sort" }
