[package]
name = "geospatial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = { version = "0" }
lazy_static = { version = "1.4.0" }
nalgebra = { version = "0.31.1", features = ["libm"] }
paste = "1.0.11"
uom_nalgebra = { path = "../uom_nalgebra" }
