[package]
name = "opentaws"
version = "0.1.0"
authors = [
	"Wanja Zaeske <wanja.zaeske@tu-clausthal.de>",
	"Janick Beck <janick.beck@tu-clausthal.de>",
	"Umut Durak <umut.durak@tu-clausthal.de>",
	]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An open source TAWS"
documentation = "https://aeronautical-informatics.github.io/openTAWS/"
readme = "README.md"
repository = "https://github.com/aeronautical-informatics/openTAWS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "aeronautical-informatics/openTAWS", branch = "main" }
github = { repository = "aeronautical-informatics/openTAWS" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/openTAWS" }
maintenance = { status = "actively-developed" }

[features]
default = ["use-serde"]
use-serde = ["uom/use_serde"]

[dependencies]
aviation_database = { path = "../aviation_database"}
lazy_static = { version = "1", features = [ "spin_no_std" ] }

# TODO jump to normal uom once https://github.com/iliekturtles/uom/pull/309 lands
uom = { git = "https://github.com/wucke13/uom.git", branch = "fix-missing-libm", default-features = false, features = [ "f64", "si", "libm" ] }
ringbuffer = "0.8"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_arrays = "0.1.0" # Serde const generic "workaround"
