[package]
name = "opentaws"
version = "0.1.0"
authors = [
	"Wanja Zaeske <wanja.zaeske@tu-clausthal.de>",
	"Janick Beck <janick.beck@tu-clausthal.de>",
	"Umut Durak <umut.durak@tu-clausthal.de>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An open source TAWS"
documentation = "https://aeronautical-informatics.github.io/openTAWS/"
readme = "README.md"
repository = "https://github.com/aeronautical-informatics/openTAWS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "aeronautical-informatics/openTAWS", branch = "main" }
github = { repository = "aeronautical-informatics/openTAWS" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/openTAWS" }
maintenance = { status = "actively-developed" }

[features]
default = ["use-serde"]
use-serde = [
	"dep:serde",
	"heapless/serde",
	"nalgebra/serde-serialize-no-std",
	"uom/use_serde",
]

[dependencies]
lazy_static = { version = "1", default-features = false, features = [
	"spin_no_std",
] }
heapless = { git = "https://github.com/japaric/heapless.git" }
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"] }
serde = { version = "*", optional = true, default-features = false, features = [
	"derive",
] }
uom = { git = "https://github.com/moritz-meier/uom.git", branch = "fix-missing-libm", default-features = false, features = [
	"f64",
	"si",
] }
