[package]
name = "taws_minimal"
version = "0.1.0"
authors = [
	"Wanja Zaeske <wanja.zaeske@tu-clausthal.de>",
	"Janick Beck <janick.beck@tu-clausthal.de>",
	"Umut Durak <umut.durak@tu-clausthal.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A minimal implementation of openTAWS"
documentation = "https://aeronautical-informatics.github.io/openTAWS/"
readme = "../README.md"
repository = "https://github.com/aeronautical-informatics/openTAWS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
codecov = { repository = "aeronautical-informatics/openTAWS", branch = "main" }
github = { repository = "aeronautical-informatics/openTAWS" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/openTAWS" }
maintenance = { status = "actively-developed" }

[dependencies]
opentaws = { path = "../opentaws" }
aviation_database = { path = "../aviation_database" }


# TODO jump to normal uom once https://github.com/iliekturtles/uom/pull/309 lands
uom = { git = "https://github.com/wucke13/uom.git", branch = "fix-missing-libm", default-features = false, features = [
	"f64",
	"si",
	"libm",
] }
casey = "0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }

# testing and examples
arbitrary = { version = "1", features = ["derive"], optional = true }
async-tungstenite = { version = "*", features = [
	"async-std-runtime",
], optional = true }
async-trait = { version = "0.1", optional = true }
cucumber = { version = "0", optional = true }
futures = { version = "0", optional = true }
lazy_static = { version = "1.4", optional = true }
rand = { version = "*", optional = true }
rand_pcg = { version = "*", optional = true }
rayon = { version = "1.5", optional = true }
serde_json = { version = "1.0", optional = true }
smol = { version = "1", optional = true }
regex = "1"


[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
path = "tests/cucumber.rs"
required-features = [
	"arbitrary",
	"async-trait",
	"cucumber",
	"futures",
	"lazy_static",
	"rand",
	"rand_pcg",
	"rayon",
	"serde_json",
	"smol",
]

[[example]]
name = "flightgear"
required-features = ["async-tungstenite", "futures", "serde_json", "smol"]
