[package]
name = "terrain_database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.18"
rayon = "1.5"
uom = { version = "0.31", features = [ "std" ] }
num-traits = "0.2"
taws_primitives = { path = "../taws_primitives" }