[package]
name = "otaws_core"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = "0"
lonlat = "1"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest
path = "test/cucumber.rs"

[dev-dependencies]
futures = "0"
async-trait = "^0.1.41"
cucumber = { package = "cucumber_rust", version = "^0.7.0" }
