[package]
name = "terrain_server"
version = "0.1.0"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.13"

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
rspec = "1.0.0-beta.4"

[[test]]
name="altitudequery_test"
harness = false
